Update Java code style requirements in AGENTS.md